# repositorio

./: README.md
SistemaTutorizacion/: AutoAssigner.cpp  AutoAssigner.hpp  CMakeLists.txt  area.csv  chat_server.cpp  index.html  main.cpp  student.cpp  student.hpp  students.csv  system.cpp  system.hpp  tutor.cpp  tutor.hpp  tutors.csv
SistemaTutorizacion/tests/: tests  tests.cpp
